--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="card">
     <img src="https://cdn.pixabay.com/photo/2020/10/06/21/54/cake-5633461__480.png" alt="birthday" class="birthday">
     <div class="text">
-      <h1>Happy Birthday Hasini!</h1>
+      <h1>Happy Birthday Nishma !</h1>
       <p>Have a great future..!</p>
       <div class="credit">with lots of love <span style="color:tomato">❤</span> </div>
 <p> from Tej </p>    </div>
